Sort columns better

--- a/PU-Stub/Index.html
+++ b/PU-Stub/Index.html
@@ -67,8 +67,9 @@
                 },
                 columns: [
                     { data: "Field_Personnummer_Reservnummer", title: "Personnummer/ Reservnummer" },
-                    { data: "Field_PersonIDTyp", title: "PersonIDTyp" },
-                    { data: "Field_Namn", title: "Namn" },
+                    { data: "Field_PersonIDTyp", title: "Typ" },
+                    { data: "Field_Förnamn", title: "Förnamn" },
+                    { data: "Field_Efternamn", title: "Efternamn" },
                     { data: "Field_Adress", title: "Adress" },
                     { data: "Field_Postnummer", title: "Postnummer" },
                     { data: "Field_Postort", title: "Postort" },
@@ -83,9 +84,8 @@
                     { data: "Field_Församling", title: "Församling" },
                     { data: "Field_Kommun", title: "Kommun" },
                     { data: "Field_Län", title: "Län" },
-                    { data: "Field_Förnamn", title: "Förnamn" },
                     { data: "Field_Mellannamn", title: "Mellannamn" },
-                    { data: "Field_Efternamn", title: "Efternamn" },
+                    { data: "Field_Namn", title: "Namn" },
                     { data: "Field_Aktuellt_Personnummer", title: "Aktuellt Personnummer" },
                 ]
             });
