Add cache headers to results from the PU-stub

--- a/PU-Stub/Index.html
+++ b/PU-Stub/Index.html
@@ -33,6 +33,7 @@
                 {
                     url: "./snod/AllPersons",
                     dataType: "json",
+                    cache: true,
                     dataSrc: function (json) {
                         var return_data = new Array();
                         for (var i = 0; i < json.length; i++) {
